2013-08-03 Heikki Hannikainen  <oh7lzb@sral.fi>

	* aprsis.c, aprs-complex.conf.in, aprx.8.in, aprx.conf.in,
	  doc/aprx-manual.odt:
	    Require manually configured APRS-IS passcode.

2013-08-03 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* agwpesocket.c, aprsis.c, beacon.c, cellmalloc.c, dprsgw.c,
	  dupecheck.c, filter.c, historydb.c, keyhash.c, pbuf.c,
	  telemetry.c, ttyreader.c:
	    Coding style change: Use cmalloc() instead of malloc() + memset().

2013-08-03 Frank Knobbe <frank@knobbe.us>

	* interface.c:
	    Correct the way how messages are passed from APRS-IS to RF.
	    There was a parse bug around pb->dstname field.

2013-04-25 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* netax25.c:
	    Receive from AX.25 interface only if it has associated
	    an Aprx interface configuration object with it.
	    Less noise on logs that way.

2013-04-25 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* filter.c:
	    Commented out code, but make it conform with API
	    of historydb.

	* parse_aprs.c:
	    The call parameter 'historydb' can be NULL,
	    don't SEGV on it.

	* telemetry.c:
	    Pointer writing to beyond end of buffer (one last time)

	* ttyreader.c:
	    hexdumpfp() text dump fix

	* beacon.c:
	    Restructured the beacon data preparation for transmit.
	    Lots of mistakes had crept in recently (2.06?)

	* interface.c, netax25.c:
	    Debug printouts of processing errors, and transmissions.

2013-04-23 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* config.c:
	    Show 'myloc' lat/lon in degrees instead of radians.

	* digipeater.c:
	    debugging..

	* filter.c:
	    A fence-post error while parsing o/A8CDEF-12 -- accepted
	    only A8CDEF-1.

2013-04-22 Matti Aarnio - OH2MQK - KP20NG  <oh2mqk@sral.fi>

	* aprx.8.in, aprx-complex.conf.in, aprx.conf.in,
	  doc/aprx-manual.odt, doc/aprx-manual.pdf:
	    Change documentation wording around <beacon>.

	* config.c:
	    Fix myloc config parameter parsing.

	* beacon.c: